--- a/extensions/pearai-extension/lib/webview/package.json
+++ b/extensions/pearai-extension/lib/webview/package.json
@@ -7,6 +7,7 @@
     "@types/prismjs": "1.26.0",
     "@types/react": "18",
     "@types/react-dom": "18",
+    "@types/react-syntax-highlighter": "^15.5.13",
     "@types/vscode-webview": "1.57.0",
     "eslint": "^8.32.0",
     "eslint-plugin-react": "^7.32.1"
@@ -17,6 +18,7 @@
     "react": "18.2.0",
     "react-diff-viewer-continued": "3.2.5",
     "react-dom": "18.2.0",
-    "react-markdown": "8.0.5"
+    "react-markdown": "8.0.5",
+    "react-syntax-highlighter": "^15.5.0"
   }
 }
