try integrating the UI

--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "@microsoft/1ds-core-js": "^3.2.13",
     "@microsoft/1ds-post-js": "^3.2.13",
     "@parcel/watcher": "2.1.0",
+    "@types/react-dom": "^18.3.0",
     "@vscode/deviceid": "^0.1.1",
     "@vscode/iconv-lite-umd": "0.7.0",
     "@vscode/policy-watcher": "^1.1.4",
@@ -99,6 +100,8 @@
     "native-keymap": "^3.3.5",
     "native-watchdog": "^1.4.1",
     "node-pty": "1.1.0-beta11",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "tas-client-umd": "0.2.0",
     "v8-inspect-profiler": "^0.1.1",
     "vscode-oniguruma": "1.7.0",
@@ -197,8 +200,8 @@
     "path-browserify": "^1.0.1",
     "postcss": "^8.4.33",
     "postcss-nesting": "^12.0.2",
-    "pump": "^1.0.1",
     "prettier": "3.2.5",
+    "pump": "^1.0.1",
     "rcedit": "^1.1.0",
     "rimraf": "^2.2.8",
     "sinon": "^12.0.1",
