--- a/src/tsconfig.json
+++ b/src/tsconfig.json
@@ -5,6 +5,7 @@
 		"preserveConstEnums": true,
 		"sourceMap": false,
 		"allowJs": true,
+		"jsx": "react-jsx",
 		"resolveJsonModule": true,
 		"isolatedModules": true,
 		"outDir": "../out/vs",
